++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject (trunk)
=================

Features & Interface
--------------------

* SQLObject instances that don't have a per-instance connection can be
  pickled and unpickled.

* Added TimedeltaCol; currently it's only implemented on PostgreSQL as an
  INTERVAL type.

Small Features
--------------

* Do not pollute the base sqlmeta class to allow Style to set idName. In
  the case of inherited idName inherited value takes precedence; to allow
  Style to set idName reset inherited idName to None.

* Validators became stricter: StringCol and UnicodeCol now accept only str
  or unicode, BoolCol accepts only bool or int, and so on.

SQLObject 0.12.2
================

Released 4 Mar 2010.

* Bugfixes ported from `SQLObject 0.11.4`_.

SQLObject 0.12.1
================

Released 8 Jan 2010.

* Fixed three bugs in PostgresConnection.

* A number of changes ported from `SQLObject 0.11.3`_.

SQLObject 0.12
==============

Released 20 Oct 2009.

Features & Interface
--------------------

* .selectBy(), .deleteBy() and .by*() methods pass all values through
  .from_python(), not only unicode.

* The user can choose a DB API driver for SQLite by using a "backend"
  parameter in DB URI or SQLiteConnection that can be a comma-separated
  list of backend names. Possible backends are: "pysqlite2" (alias
  "sqlite2"), "sqlite3", "sqlite" (alias "sqlite1"). Default is to test
  pysqlite2, sqlite3 and sqlite in that order.

* The user can choose a DB API driver for PostgreSQL by using a "backend"
  parameter in DB URI or PostgresConnection that can be a comma-separated
  list of backend names. Possible backends are: "psycopg2", "psycopg1",
  "psycopg" (tries psycopg2 and psycopg1), "pygresql". Default is
  "psycopg".
  WARNING: API change! PostgresConnection's parameter
  "usePygresql" is now replaced with "backend=pygresql".

* The user can choose a DB API driver for MSSQL by using a "backend"